# server/internal/api/oas_client_gen.go
@@ -2287,6 +2287,57 @@ func (c *Client) sendListExercises(ctx context.Context, params ListExercisesPara
 			return res, errors.Wrap(err, "encode query")
 		}
 	}
+	{
+		// Encode "muscle" parameter.
+		cfg := uri.QueryParameterEncodingConfig{
+			Name:    "muscle",
+			Style:   uri.QueryStyleForm,
+			Explode: true,
+		}
+
+		if err := q.EncodeParam(cfg, func(e uri.Encoder) error {
+			if val, ok := params.Muscle.Get(); ok {
+				return e.EncodeValue(conv.StringToString(val))
+			}
+			return nil
+		}); err != nil {
+			return res, errors.Wrap(err, "encode query")
+		}
+	}
+	{
+		// Encode "equipment" parameter.
+		cfg := uri.QueryParameterEncodingConfig{
+			Name:    "equipment",
+			Style:   uri.QueryStyleForm,
+			Explode: true,
+		}
+
+		if err := q.EncodeParam(cfg, func(e uri.Encoder) error {
+			if val, ok := params.Equipment.Get(); ok {
+				return e.EncodeValue(conv.StringToString(val))
+			}
+			return nil
+		}); err != nil {
+			return res, errors.Wrap(err, "encode query")
+		}
+	}
+	{
+		// Encode "bodyPart" parameter.
+		cfg := uri.QueryParameterEncodingConfig{
+			Name:    "bodyPart",
+			Style:   uri.QueryStyleForm,
+			Explode: true,
+		}
+
+		if err := q.EncodeParam(cfg, func(e uri.Encoder) error {
+			if val, ok := params.BodyPart.Get(); ok {
+				return e.EncodeValue(conv.StringToString(val))
+			}
+			return nil
+		}); err != nil {
+			return res, errors.Wrap(err, "encode query")
+		}
+	}
 	u.RawQuery = q.Values().Encode()
 
 	stage = "EncodeRequest"
