# server/internal/api/oas_validators_gen.go
@@ -747,6 +747,39 @@ func (s *ExerciseCatalogListResponse) Validate() error {
 			Error: err,
 		})
 	}
+	if err := func() error {
+		if s.Muscles == nil {
+			return errors.New("nil is invalid value")
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "muscles",
+			Error: err,
+		})
+	}
+	if err := func() error {
+		if s.Equipment == nil {
+			return errors.New("nil is invalid value")
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "equipment",
+			Error: err,
+		})
+	}
+	if err := func() error {
+		if s.BodyParts == nil {
+			return errors.New("nil is invalid value")
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "bodyParts",
+			Error: err,
+		})
+	}
 	if len(failures) > 0 {
 		return &validate.Error{Fields: failures}
 	}
@@ -1145,6 +1178,34 @@ func (s *Prescription) Validate() error {
 	}
 
 	var failures []validate.FieldError
+	if err := func() error {
+		if value, ok := s.Sets.Get(); ok {
+			if err := func() error {
+				if err := (validate.Int{
+					MinSet:        true,
+					Min:           1,
+					MaxSet:        false,
+					Max:           0,
+					MinExclusive:  false,
+					MaxExclusive:  false,
+					MultipleOfSet: false,
+					MultipleOf:    0,
+					Pattern:       nil,
+				}).Validate(int64(value)); err != nil {
+					return errors.Wrap(err, "int")
+				}
+				return nil
+			}(); err != nil {
+				return err
+			}
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "sets",
+			Error: err,
+		})
+	}
 	if err := func() error {
 		if value, ok := s.WeightKg.Get(); ok {
 			if err := func() error {
